--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
 						<strong>Email:</strong>
 						sayannyaghosh01@gmail.com
 						<hr>
-						 <a href="https://www.facebook.com/sayannya.ghosh" class="btn-social btn-outline">   <i class="fa fa-facebook fa-2x" style="font-size:1.8em;"></i>   </a>
+						 <a href="https://www.facebook.com/sayannya.ghosh" class="btn-social btn-outline">   <i class="fa fa-facebook fa-2x" style="font-size:1.8em;"></i>   </a>&ensp;
 
 						 <!--<a href="https://twitter.com/availchet" class="btn-social btn-outline">   <i class="fa fa-twitter fa-2x" style="font-size:1.8em;"></i>   </a>-->
 
-						 <a href="https://www.linkedin.com/in/sg17/" class="btn-social btn-outline"> <i class="fa fa-linkedin fa-2x"></i> </a>
+						 <a href="https://www.linkedin.com/in/sg17/" class="btn-social btn-outline"> <i class="fa fa-linkedin fa-2x"></i> </a>&ensp;
 
 						 <a href="https://github.com/sayannyaghosh" class="btn-social btn-outline"> <i class="fa fa-github fa-2x"></i> </a>
 
