--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
       <! END PRELOADER -->
 <body data-type="scroll" data-target="#navbar-example" class="fixed">
-	<div id="top" class="jumbotron" data src="./img/autumn.jpg" data-position="bottom right" style="height: 761px;background-image: url(&quot;./img/autumn.jpg&quot;); background-position: right bottom; background-color: #22A39F;">
+	<div id="top" class="jumbotron" data src="./img/autumn.jpg" data-position="bottom right" style="height: 761px;margin:0 auto;overflow:hidden;background-image: url(&quot;./img/autumn.jpg&quot;); background-position: right bottom; background-color: #22A39F;">
 		<div class="container">
 			<h1><font color="white">Sayannya Ghosh</font></h1>
 			<p class="lead">
