--- a/index.html
+++ b/index.html
@@ -181,11 +181,11 @@
 				<!-- Start skills progress bar -->
 				<div class="row r20">
 					<div class="skill-progress-bar">
-						<span>Python</span>
+						<span>C(Basic)</span>
 						<div class="pro-bar-container">
 							<div class="pro-bar bar-80 color-emerald" data-pro-bar-percent="80"></div>
 						</div>
-						<span>C(Basic)</span>
+						<span>Python(Basic)</span>
 						<div class="pro-bar-container">
 							<div class="pro-bar bar-80 color-nephritis" data-pro-bar-percent="80" data-pro-bar-delay="100"></div>
 						</div>
@@ -201,9 +201,9 @@
 						<div class="pro-bar-container">
 							<div class="pro-bar bar-70" style="background: #1a6da2;" data-pro-bar-percent="60" data-pro-bar-delay="325"></div>
 						</div>
-						<span>Java</span>
+						<span>C++</span>
 						<div class="pro-bar-container">
-							<div class="pro-bar bar-60 color-asbestos" data-pro-bar-percent="50" data-pro-bar-delay="385"></div>
+							<div class="pro-bar bar-60 color-asbestos" data-pro-bar-percent="70" data-pro-bar-delay="385"></div>
 						</div>
 					</div>
 				</div>
